change img folder path to relative & publish website project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <body>
       <div class="main-container">
          <div class="block-qrcode">
-            <img src="/images/image-qr-code.png" alt="qrcode link to skill mentor website">
+            <img src="./images/image-qr-code.png" alt="qrcode link to skill mentor website">
          </div>
          <div class="block-text">
             <div class="title">
