--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </div>
          <div class="block-text">
             <div class="title">
-               <p>Improve your front-end skills by building projects</p>
+               <h1>Improve your front-end skills by building projects</h1>
             </div>
             <div class="text">
                <p>Scan the QR code to visite Frontend Mentor and take your coding skills to the next level</p>
